Removing Fortify as it will be released separately